--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,21 +4,13 @@ layout: default
 
 <div class="row g-5 mb-5">
   <div class="col-md-6">
-    <h3 class="fw-bold">Research</h3>
-    {{ content }}
+    I received my Ph.D. from Texas A&M University in August 2025. My advisor was Dr. Emil Straube. I am currently on the job market.
+    My research interest lies in complex analysis and partial differential equations. More specifically I am interested in the theory of the dbar-Neumann problem.
+    Click here for a pdf file of my CV.
+    Email: tanujgupta17 [at] gmail [dot] com
   </div>
   <div class="col-md-6">
     <img src="{{ site.github.url }}/assets/img/tanuj.jpeg" alt="Tanuj" width="50%">
   </div>
 </div>
 
-{% include publications.html %}
-
-<div class="row g-5 mb-5">
-  <div class="col-md-12">
-    <h3 class="fw-bold border-bottom pb-3 mb-5">Updates</h3>
-    {% for post in site.posts %}
-      <p><a href="{{ site.github.url }}/{{ post.url }}">{{ post.title }}</a> - {{ post.date | date: "%B %-d, %Y" }}</p>
-    {% endfor %}
-  </div>
-</div>
