--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,7 +6,7 @@ layout: default
   <div class="col-md-6">
     I received my Ph.D. from Texas A&M University in August 2025. My advisor was Dr. Emil Straube. I am currently on the job market.
     My research interest lies in complex analysis and partial differential equations. More specifically I am interested in the theory of the dbar-Neumann problem.
-    Click here for a pdf file of my CV.
+    Click <a href="https://drive.google.com/file/d/18zDha0brU0CGyl3COPnVT7g_TQdlMY6r/view?usp=drive_link"> here </a> for a pdf file of my CV. 
     Email: tanujgupta17 [at] gmail [dot] com
   </div>
   <div class="col-md-6">
