--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,10 +4,10 @@ layout: default
 
 <div class="row g-5 mb-5">
   <div class="col-md-6">
-    I received my Ph.D. from Texas A&M University in August 2025. My advisor was Dr. Emil Straube. I am currently on the job market.
-    My research interest lies in complex analysis and partial differential equations. More specifically I am interested in the theory of the dbar-Neumann problem.
-    Click <a href="https://drive.google.com/file/d/18zDha0brU0CGyl3COPnVT7g_TQdlMY6r/view?usp=drive_link"> here </a> for a pdf file of my CV. 
-    Email: tanujgupta17 [at] gmail [dot] com
+    <p>I received my Ph.D. from Texas A&M University in August 2025. My advisor was Dr. Emil Straube. I am currently on the job market.</p>
+    <p>My research interest lies in complex analysis and partial differential equations. More specifically I am interested in the theory of the dbar-Neumann problem.</p>
+    <p><a href="https://drive.google.com/file/d/1b-o5Sh3yq1LwCTM7nwcN79B6ABbqo9MT/view?usp=sharing">Click here</a> for a pdf file of my CV.</p>
+    <p>Email: tanujgupta17 [at] gmail [dot] com </p>
   </div>
   <div class="col-md-6">
     <img src="{{ site.github.url }}/assets/img/tanuj.jpeg" alt="Tanuj" width="50%">
