--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,3 +14,15 @@ layout: default
   </div>
 </div>
 
+<hr>
+
+<div class="row g-5 mb-5">
+  <div class="col-md-12">
+    <h2>Publications / Preprints</h2>
+    <ul>
+      <li>
+        <a href="http://www.iumj.indiana.edu/IUMJ/Preprints/60462.pdf">Modifications of the Levi core</a> (with Emil Straube and J. Nick Treuer), to appear in Indiana University Mathematics Journal
+      </li>
+    </ul>
+  </div>
+</div>
